gui/kprocessrunner: normalize working directory

systemd requires working directory to be normalized since
https://github.com/systemd/systemd/commit/14631951cea807de2d482a430841c604c2040718.

BUG: 490966